<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color_purple"
    android:paddingTop="52dp"
    app:flow_horizontalAlign="center"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background_login">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="42dp"
            android:layout_height="6dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trace" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/loginscreen_welcome"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/loginscreen_welcome_desc"
            android:textColor="@color/f_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/winelogo2" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/loginscreen_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textColor="@color/f_black"
            android:textColorHighlight="@color/bg_color_purple"
            android:textColorLink="@color/bg_color_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/loginscreen_password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textColor="@color/f_black"
            android:textColorHighlight="@color/bg_color_purple"
            android:textColorLink="@color/bg_color_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/saveAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:buttonTint="@color/bg_color_purple"
            android:fontFamily="@font/poppins_light"
            android:paddingTop="2dp"
            android:text="@string/loginscreen_save"
            android:textColor="@color/f_black"
            android:textColorHighlight="@color/bg_color_purple"
            android:textColorLink="@color/bg_color_purple"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="50dp"
            android:layout_marginTop="-5dp"
            android:text="@string/loginscreen_login"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/bg_color_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveAccount" />

        <TextView
            android:id="@+id/callLoginScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/loginscreen_register"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>