<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color_purple"
    android:paddingTop="52dp"
    app:flow_horizontalAlign="center"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/loginscreen_email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColor="@color/f_black"
                android:textColorHighlight="@color/bg_color_purple"
                android:textColorLink="@color/bg_color_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameError"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/registerscreen_welcome_desc"
                android:textColor="@color/f_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/loginscreen_name_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColor="@color/f_black"
                android:textColorHighlight="@color/bg_color_purple"
                android:textColorLink="@color/bg_color_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/callLoginScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/registerscreen_back"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/loginscreen_password_hint"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textColor="@color/f_black"
                android:textColorHighlight="@color/bg_color_purple"
                android:textColorLink="@color/bg_color_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailError"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:srcCompat="@drawable/winelogo2" />

            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/bg_color_purple"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/registerscreen_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/registerscreen_welcome"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordError">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/genderMasculine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_background_gender"
                    android:backgroundTint="@color/colorEditText">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/registerscreen_gender_masculine"
                        android:textColor="#FFFFFF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.511"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/mars_solid" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/genderFemele"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_background_gender"
                    android:backgroundTint="@color/colorEditText">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/registerscreen_gender_female"
                        android:textColor="#FFFFFF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.511"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/venus_solid" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="42dp"
                android:layout_height="6dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/trace" />

            <TextView
                android:id="@+id/nameError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text=" * Please include a valid email."
                android:textAlignment="textStart"
                android:textColor="@color/f_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/emailError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text=" * Please enter a valid password with more"
                android:textAlignment="textStart"
                android:textColor="@color/f_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text=" * Please enter a valid password with more"
                android:textAlignment="textStart"
                android:textColor="@color/f_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>